2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* OblivionStyle.xml, Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor.Highlighting/Style.cs,
	  Mono.TextEditor.Highlighting/DefaultStyle.cs, CSharpSyntaxMode.xml,
	  C64Style.xml: Worked on styling.

2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/Style.cs,
	  Mono.TextEditor.Highlighting/Span.cs, CSharpSyntaxMode.xml,
	  XmlSyntaxMode.xml: Worked on highlighting.

2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/BookmarkMargin.cs: Worked on bookmark commands.

2008-01-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Added update request to the delete
	  action.

2008-01-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/Style.cs: Fixed delete selection bug (caret
	  offset didn't get updated), added primitive longest line management,
	  changed syntax colors a bit.

2008-01-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs: No/missing syntax
	  highlighting is now handled with a default syntax highlighting.

2008-01-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/FoldMarkerMargin.cs, Mono.TextEditor/IMargin.cs,
	  Mono.TextEditor/TextEditor.cs: Text cursor is now only for the text
	  region.

2008-01-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditor.cs:
	  Improved drag & drop support.

2008-01-27  Mike Krüger <mkrueger@novell.com> 
